fix gap in home

--- a/website/src/app/components/home/home.component.scss
+++ b/website/src/app/components/home/home.component.scss
@@ -358,7 +358,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
-        margin-bottom: 0.75rem;
+        margin-bottom: 0.25rem;
 
         i {
           color: var(--primary-orange);
